Correction in terminology

--- a/Project 2/Assignment 4/Assignment 4.ipynb
+++ b/Project 2/Assignment 4/Assignment 4.ipynb
@@ -302,7 +302,7 @@
     "    stop = clock()\n",
     "\n",
     "    if print_time:\n",
-    "        print(\"Time taken for %d labels: %.4f seconds\" % (X_test.shape[0],stop-start) )\n",
+    "        print(\"Time taken for %d points: %.4f seconds\" % (X_test.shape[0],stop-start) )\n",
     "    return labels"
    ]
   },
@@ -369,9 +369,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken for 256 labels: 0.4690 seconds\n",
+      "Time taken for 256 points: 0.4690 seconds\n",
       "Traing Accuracy \t for k = 1 is 100.00%\n",
-      "Time taken for 96 labels: 0.1654 seconds\n",
+      "Time taken for 96 points: 0.1654 seconds\n",
       "Testing Accuracy\t for k = 1 is 88.54%\n",
       "------------------------------------------------\n"
      ]
@@ -390,9 +390,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken for 256 labels: 0.2842 seconds\n",
+      "Time taken for 256 points: 0.2842 seconds\n",
       "Traing Accuracy \t for k = 3 is 94.53%\n",
-      "Time taken for 96 labels: 0.0942 seconds\n",
+      "Time taken for 96 points: 0.0942 seconds\n",
       "Testing Accuracy\t for k = 3 is 89.58%\n",
       "------------------------------------------------\n"
      ]
@@ -411,9 +411,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken for 256 labels: 0.2535 seconds\n",
+      "Time taken for 256 points: 0.2535 seconds\n",
       "Traing Accuracy \t for k = 5 is 93.36%\n",
-      "Time taken for 96 labels: 0.0890 seconds\n",
+      "Time taken for 96 points: 0.0890 seconds\n",
       "Testing Accuracy\t for k = 5 is 93.75%\n",
       "------------------------------------------------\n"
      ]
